Fixed issue with permission checkbox buttons jumping around (slightly) when clicked.
git-svn-id: svn+ssh://cvs1/svn/listen/trunk@2786 4692729f-32a0-46b7-9832-1bf53c4881b5

--- a/controller/listen/web-app/resources/app/css/common.css
+++ b/controller/listen/web-app/resources/app/css/common.css
@@ -271,6 +271,13 @@ button.disabled:hover {
     border-color: #999999 !important;
 }
 
+input[type=submit]::-moz-focus-inner,
+input[type=button]::-moz-focus-inner,
+input[type=reset]::-moz-focus-inner,
+button::-moz-focus-inner {
+    border: 0;
+}
+
 .sortable.sorted.asc a:after,
 .columnHeader.sorted.asc a:after {
     content: '\25B4';
